OO-4198: warning if correct answers don't have points but incorrect